--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -190,6 +190,7 @@
 								miniVideo = temp1 + "/microtrailer.webm";
 
 								miniVideo = miniVideo.Replace("cdn.akamai.steamstatic.com/", "cdn.cloudflare.steamstatic.com/");
+								miniVideo = miniVideo.Replace("http://", "https://");
 							}
 						}
 
