--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -747,6 +747,7 @@
 				if (string.IsNullOrEmpty(juego.Media.Video) == false)
 				{
 					mediaMostrar = juego.Media.Video;
+					mediaMostrar = mediaMostrar.Replace("http://", "https://");
 					mediaMostrarPosicion = 99999;
 				}
 				else
