--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -248,8 +248,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <script src="_framework/blazor.server.js" autostart="false"></script>
-    <script src="boot.js"></script>
+    <script src="_framework/blazor.server.js" @* autostart="false" *@></script>
+    @* <script src="boot.js"></script> *@
 
     <script>
         function moverScroll(id) {
