--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
@@ -40,7 +40,7 @@
 				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id">
 					<div class="perfil-flexible-centrado">
 						<div>
-							<img src="@juego.Imagenes.Capsule_231x87" style="width: 231px; height: 87px;" />
+							<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
 						</div>
 
 						<div style="width: 100%; padding: 5px 20px;">
@@ -55,7 +55,7 @@
 						</div>
 
 						<div style="width: 250px; padding: 5px 15px; text-align: center; font-size: 17px;">
-							@Herramientas.JuegoFicha.PrecioMinimoActual(juego, true, idioma)
+							@GenerarMensaje(juego)
 						</div>
 					</div>
 				</a>
@@ -135,5 +135,115 @@
 		}
 
 		CargarJuegos(minimo, maximo);
+	}
+
+	private string GenerarMensaje(Juegos.Juego juego)
+	{
+		string mensaje = string.Empty;
+
+		if (string.IsNullOrEmpty(juego.FreeToPlay) == false)
+		{
+			if (juego.FreeToPlay.ToLower() == "true")
+			{
+				return Herramientas.Idiomas.CogerCadena(idioma, "Search.String6");
+			}
+		}
+
+		if (juego.Gratis != null)
+		{
+			if (juego.Gratis.Count > 0)
+			{
+				foreach (var gratis in juego.Gratis)
+				{
+					if (DateTime.Now >= gratis.FechaEmpieza && DateTime.Now <= gratis.FechaTermina)
+					{
+						return Herramientas.Idiomas.CogerCadena(idioma, "Search.String5");
+					}
+				}
+			}
+		}
+
+		if (juego.Bundles != null)
+		{
+			if (juego.Bundles.Count > 0)
+			{
+				foreach (var bundle in juego.Bundles)
+				{
+					if (DateTime.Now >= bundle.FechaEmpieza && DateTime.Now <= bundle.FechaTermina)
+					{
+						return Herramientas.Idiomas.CogerCadena(idioma, "Search.String4");
+					}
+				}
+			}
+		}
+
+		if (juego.Suscripciones != null)
+		{
+			if (juego.Suscripciones.Count > 0)
+			{
+				foreach (var suscripcion in juego.Suscripciones)
+				{
+					if (DateTime.Now >= suscripcion.FechaEmpieza && DateTime.Now <= suscripcion.FechaTermina)
+					{
+						return Herramientas.Idiomas.CogerCadena(idioma, "Search.String3");
+					}
+				}
+			}
+		}
+
+		decimal minimoCantidad = 10000000;
+		Juegos.JuegoPrecio minimoFinal = new Juegos.JuegoPrecio();
+
+		if (juego.PrecioActualesTiendas != null)
+		{
+			foreach (var precio in juego.PrecioActualesTiendas)
+			{
+				bool fechaEncaja = Herramientas.JuegoFicha.CalcularAntiguedad(precio);
+
+				if (fechaEncaja == true)
+				{
+					decimal tempPrecio = precio.Precio;
+
+					if (precio.Moneda != Herramientas.JuegoMoneda.Euro)
+					{
+						tempPrecio = Herramientas.Divisas.Cambio(tempPrecio, precio.Moneda);
+					}
+
+					if (tempPrecio < minimoCantidad)
+					{
+						minimoCantidad = tempPrecio;
+						minimoFinal = precio;
+					}
+				}
+			}
+		}
+
+		if (minimoFinal != null)
+		{
+			if (minimoFinal.Precio > 0)
+			{
+				string precioTexto = string.Empty;
+
+				precioTexto = minimoFinal.Precio.ToString();
+				precioTexto = precioTexto.Replace(".", ",");
+
+				int int1 = precioTexto.IndexOf(",");
+
+				if (int1 == precioTexto.Length - 2)
+				{
+					precioTexto = precioTexto + "0";
+				}
+
+				precioTexto = precioTexto + "€";
+
+				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Search.String1"), precioTexto);
+			}
+			else
+			{
+				return Herramientas.Idiomas.CogerCadena(idioma, "Search.String2");
+			}
+		}
+
+		return Herramientas.Idiomas.CogerCadena(idioma, "Search.String2");
 	}
 }
