--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
     if (ViewData["Title"].ToString() == Herramientas.Idiomas.CogerCadena(idioma, "Index.Title"))
     {
-        titulo = "pepeizq's deals • Now with Email Notifications";
+        titulo = "pepeizq's deals • " + Herramientas.Idiomas.CogerCadena(idioma, "Index.Subtitle");
     }
     else
     {
