--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -679,7 +679,7 @@ else
 	{
 		string mensaje = null;
 
-		mensaje = Herramientas.Calculadora.HaceTiempo(juego.PrecioActualesTiendas[0].FechaDetectado, idioma);
+		mensaje = Herramientas.Calculadora.HaceTiempo(juego.PrecioActualesTiendas[0].FechaUltimoMinimo, idioma);
 
 		return mensaje;
 	}
